frame/support/test/tests/derive_no_bound_ui/ord.stderr
error[E0277]: can't compare `Foo<T>` with `Foo<T>`
 --> tests/derive_no_bound_ui/ord.rs:23:8
  |
 23 | struct Foo<T: Config> {
    |        ^^^^^^^^^^^^^^ no implementation for `Foo<T> < Foo<T>` and `Foo<T> > Foo<T>`
    |
help: the trait `PartialOrd` is not implemented for `Foo<T>`
   --> tests/derive_no_bound_ui/ord.rs:23:1
    |
 23 | struct Foo<T: Config> {
    | ^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `Ord`
   --> $RUST/core/src/cmp.rs
    |
    | pub const trait Ord: [const] Eq + [const] PartialOrd<Self> + PointeeSized {
    |                                   ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Ord`

error[E0277]: can't compare `Foo<T>` with `Foo<T>`
 --> tests/derive_no_bound_ui/ord.rs:23:8
  |
 23 | struct Foo<T: Config> {
    |        ^^^^^^^^^^^^^^ no implementation for `Foo<T> == Foo<T>`
    |
help: the trait `PartialEq` is not implemented for `Foo<T>`
   --> tests/derive_no_bound_ui/ord.rs:23:1
    |
 23 | struct Foo<T: Config> {
    | ^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `std::cmp::Eq`
   --> $RUST/core/src/cmp.rs
    |
    | pub const trait Eq: [const] PartialEq<Self> + PointeeSized {
    |                     ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Eq`

error[E0599]: `<T as Config>::C` is not an iterator
  --> tests/derive_no_bound_ui/ord.rs:24:2
   |
24 |     c: T::C,
   |     ^ `<T as Config>::C` is not an iterator
   |
   = note: the following trait bounds were not satisfied:
           `<T as Config>::C: Iterator`
           which is required by `&mut <T as Config>::C: Iterator`
